--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -756,7 +756,7 @@ msgid ":?.!"
 msgstr ":?.!"
 
 msgid "This field is required."
-msgstr "Este campo é obrigatório."
+msgstr "Opa, necessário preencher o campo"
 
 msgid "Enter a whole number."
 msgstr "Informe um número inteiro."
